# slurpslurp

./: .gitignore  Cargo.toml  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  README.md  ULTRA_FAST_GUIDE.md  ULTRA_FAST_GUIDE_EN.md  config_example.toml
.cargo/: config.toml
sql_scripts/: attachment_lookup.sql  get_messages_around.sql  optimize_indexes.sql  setup.sql  stats.sql  top_yappers.sql  who_said.sql
src/: cli.rs  config.rs  database.rs  downloader.rs  guild.rs  handler.rs  main.rs  message.rs  scraper.rs
src/event_processor/: message.rs  misc.rs  mod.rs  user.rs
tools/: attachment_lookup.sql  benchmark.py  fast_prepare.sh  invites_extractor.py  performance_monitor.py  prepare_dataset.py  requirements.txt  watcher.css  watcher.html  watcher.js  watcher.py
